chore: add adsence

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -23,6 +23,7 @@
   <head>
     <meta charset="utf-8">
     <title>{{ page_title }}</title>
+    <script data-ad-client="ca-pub-4605689715748872" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
     <meta name="description" content="{{ meta_description }}" />
     <meta property="og:title" content="{{ user.name }}" />
     <meta property="og:image" content="{{ user.avatar_url }}" />
